# APS_Database

./: ..gitignore.swp  .env.example  .gitignore  .gitignore.save  AGENTS.md  CLAUDE.md  Readme.md  conftest.py  context.md  data_scraping.py  pyproject.toml  requirements.txt  server.py
data_processing_scripts/: DatabaseScript.py  apply_mechanistic_energy_proxy.py  baselines_ingestion.py  calibrate_mechanistic_energy_proxy.py  calibrate_proxy_distance.py  common.py  create_avalanche_dashboard.py  create_baselines_dashboard.py  create_baselines_dashboard_device_library.py  create_interactive_damage_signature_viewer.py  create_interactive_phenotype_viewer.py  create_interactive_sc_irrad_equivalence_viewer.py  create_irradiation_dashboard.py  create_iv_physical_prediction_dashboard.py  create_proxy_readiness_dashboard.py  create_sc_dashboard.py  create_sc_irrad_dashboard.py  create_sc_irrad_prediction_dashboard.py  dashboard_png_export.py  datasheetgm.py  datasheetrdson.py  datasheetvth.py  db_config.py  export_proxy_candidate_combined_v3_csv.py  export_proxy_candidate_energy_v2_csv.py  export_proxy_method_concordance_csv.py  export_proxy_truth_curation_queue.py  export_proxy_truth_curation_shortlist.py  extract_damage_metrics.py  extract_single_event_effects.py  extract_stress_pulse_history.py  gsi_march2025_mapping.py  ingestion_avalanche.py  ingestion_baselines.py  ingestion_irradiation.py  ingestion_sc.py  irradiation_energy_windows.py  irradiation_ingestion.py  mechanistic_energy_proxy.py  ml_post_iv_physical_prediction.py  (+18 more)
docs/: figure1b_stress_timescale_plan_2026-06-11.md  gan_review_dashboard_mapping.md  irradiation_paper_audit.md  ml_data_audit.md  proxy_implementation_context_2026-06-10.md  proxy_implementation_plan_2026-06-10.md  proxy_method_review_2026-06-10.md  proxy_readiness_dashboard_audit_2026-06-17.md  proxy_readiness_dashboard_redesign_plan_2026-06-17.md  proxy_readiness_dashboard_review_2026-06-17.md  proxy_stress_equivalence_review.md  repo_architecture_implementation_2026-07-13.md  repo_architecture_review_2026-07-06.md  selam_avalanche_device_mapping_2026-06-10.md  single_event_detection.md
requirements/: constraints-py312.txt
schema/: 000_device_library.sql  001_normalize_device_voltage.sql  020_irradiation_core.sql  021_irradiation_run_dedup.sql  022_irradiation_single_events.sql  023_iv_prediction.sql  024_iv_physical_prediction.sql  (+26 more)
(+220 files in other folders)
